tests/exceptions/ill-typed/ambiguous-throw-type-1.stella
language core;

extend with #exceptions, #exception-type-declaration;

exception type = Nat

fn main(a : Nat) -> Nat {
  return (throw(0))(throw(0))
}